# daily-checkin-bot

./: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/: __init__.py
apps/api/: main.py
apps/scheduler/: main.py
apps/worker/: main.py
infra/: Dockerfile.scheduler  Dockerfile.worker  docker-compose.yml
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_late_prompt.py
src/daily_checkin/: config.py  db.py  models.py  repositories.py  storage.py  utils_time.py
src/daily_checkin/services/: notifications.py  scheduler.py  state_machine.py  tasks.py
src/daily_checkin/telegram/: bot.py  handlers.py  rate_limiter.py
tests/: test_state_machine.py
