[project]
name = "daily-checkin-bot"
version = "0.1.0"
description = "Daily Check-in Telegram bot"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "aiogram>=3.10",
  "celery>=5.4",
  "redis>=5.0",
  "SQLAlchemy>=2.0",
  "psycopg2-binary>=2.9",
  "alembic>=1.13",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "orjson>=3.10",
  "boto3>=1.34",
]

[project.optional-dependencies]
test = ["pytest>=8.2"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
